<resources>
    <string name="app_name">Messenger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Иван</string>
    <string name="nav_header_subtitle">+7(953) 463 79 16</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="newGroup">Новая группа</string>
    <string name="NewSecretChat">Новый секретный чат</string>
    <string name="NewChanel">Новый канал</string>
    <string name="contact">Контакты</string>
    <string name="Like">Избранное</string>
    <string name="Call">Звонки</string>
    <string name="addPerson">Пригласить друзей</string>
</resources>