<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/allnew"
        android:checkableBehavior="single">
        <item
            android:id="@+id/newGroup"
            android:icon="@drawable/group"
            android:title="@string/newGroup" />
        <item
            android:id="@+id/NewSecretChat"
            android:icon="@drawable/send"
            android:title="@string/NewSecretChat" />
        <item
            android:id="@+id/NewChanel"
            android:icon="@drawable/pen"
            android:title="@string/NewChanel" />
    </group>

    <group android:id="@+id/user"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contact"
            android:icon="@drawable/cont"
            android:title="@string/contact" />
        <item
            android:id="@+id/Like"
            android:icon="@drawable/star"
            android:title="@string/Like" />
        <item
            android:id="@+id/Call"
            android:icon="@drawable/call"
            android:title="@string/Call" />
        <item
            android:id="@+id/addPerson"
            android:icon="@drawable/add"
            android:title="@string/addPerson" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/set"
            android:title="@string/action_settings" />
    </group>
</menu>